apps/base/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo  
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: echo
