apps/base/echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: echo
spec:
  ingressClassName: nginx
  rules:
  - host: echo.example.com
    http:
      paths:
      - backend:
          service: 
            name: echo
            port: 
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - echo.example.com
    secretName: echo-tls
